# dsa

./: .gitignore  .pre-commit-config.yaml  50_days_of_Python.py  AGENTS.md  AGENTS.md.others  Cargo.toml  README.md  TODO.md  exercism_202412.go  exercism_202501.py  extract_leetcode_problem_ids.go  freecodecamp_202509.py  freecodecamp_202510.py  freecodecamp_202511.py  freecodecamp_202512.py  freecodecamp_test.py  gemini.md  go.mod  leetcode.go  leetcode_202412.go  leetcode_202412.py  leetcode_202501.go  leetcode_202502.go  leetcode_202503.go  leetcode_202505.py  leetcode_202506.py  leetcode_202507.py  leetcode_202511.py  leetcode_202512.py  mapping.md  pyproject.toml  repos.txt  roles_rpg.py  run_benchmarks.sh  solved_problems.txt  sql_murder_mystery.sql  verify_security.sh
.gemini/: settings.json
advent_of_code_2025/: main.py
analytics/: 1_download.py  2_analytics.py  monthly_commits_terminal.py  notebook.py  repo_languages_over_time.py  requirements.txt
excercism202412/: main.go
extract_leetcode_problem_ids/: main.go
kit/: bench_test.go  common.go  debug.go  debug_stub.go
lc202412/: main.go
lc202501/: main.go
lc202502/: main.go
lc202503/: main.go
lc202504/: main.go
lc202505/: main.go  main_test.go
lc202506/: main.go  main_test.go
lc202507/: main.go  main_test.go
lc202508/: main.go  main_test.go
lc202509/: main.go  main_test.go
lc202510/: main.go  main_test.go
lc202511/: Cargo.toml  leetcode_202511.py  main.go  main_test.go
lc202512/: Cargo.toml  main.go  main_test.go
lc202601/: Cargo.toml  leetcode_202601.py  main.go  main_test.go  (+1 more)
(+24 files in other folders)
