[project]
name = "dsa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "codeflash>=0.12.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["F401"]

[tool.uv]
python-preference = "managed"

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "."
tests-root = "tests"
test-framework = "pytest"
benchmarks-root = ""
ignore-paths = []
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
