[project]
name = "dsa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.11.4",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "pytest-xdist~=3.8.0",
    "ruff>=0.13.0",
]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["F401"]

[tool.uv]
python-preference = "managed"

[tool.ty.rules]
unresolved-import = "ignore"

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "."
tests-root = "tests"
test-framework = "pytest"
benchmarks-root = ""
ignore-paths = []
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
